<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok" translatable="false">OK</string>
    <string name="app_name" translatable="false">AFit</string>

    <string name="privacy_link" translatable="false">https://lestec-al.github.io/lestec-al/privacy-policy</string>
    <string name="email_link" translatable="false">mailto:alexyurgel@gmail.com</string>

    <string name="do_exercise">Do</string>
    <string name="stop">STOP</string>
    <string name="rest">Rest time</string>
    <string name="sets">Sets</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="delete_card_info">Pressing and holding will permanently delete this card along with all its data!</string>
    <string name="delete_entry_info">Pressing and holding will permanently delete this entry</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_st">Add entry</string>
    <string name="edit_st">Edit entry</string>
    <string name="type_text">Type text</string>
    <string name="settings">Settings</string>
    <string name="color">Color</string>
    <string name="default_t">Default</string>
    <string name="export_db">Export data to the device</string>
    <string name="import_db">Import data from the device</string>
    <string name="error">Error</string>
    <string name="calendar">Statistics calendar</string>
    <string name="set_date">Set date</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="value">Value</string>
    <string name="exportDriveDB">Export data to the cloud</string>
    <string name="importDriveDB">Import data from the cloud</string>
    <string name="auth_info">If you need cloud sync, please connect Google account</string>
    <string name="no_cards_info">Tap + to create your first card</string>
    <string name="data_replace">All existing data will be replaced</string>
    <string name="connect_cloud">Connect to the cloud</string>
    <string name="app_ver">Version:</string>
    <string name="no_data_info">No data yet</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="start_workout">Start workout</string>
    <string name="delete_card">Delete card</string>
    <string name="training_min">min of activity</string>
    <string name="show_hide_graph">Hide or show graph</string>
    <string name="done">Done</string>
    <string name="show_weight">Workout with weights</string>
    <string name="add_card">Add a card</string>
    <string name="exercise_card">Exercise</string>
    <string name="statistic_card">Statistic</string>
    <string name="card_settings">Card settings</string>
    <string name="home">Home</string>
    <string name="workout_is_over">Workout is over</string>
    <string name="reps_in">reps in</string>
    <string name="reps">Reps</string>
    <string name="you_completed">You completed</string>
    <string name="save_workout">Save workout</string>
    <string name="delete">Delete</string>
    <string name="all_fit_points_info">Exercise more to level up!</string>
    <string name="week_points_info">This is the number of minutes you exercised this week</string>
    <string name="empty_error_info">Field required</string>
    <string name="ex_st_cards">Cards</string>
    <string name="workout_score_is">Your level is:</string>
    <string name="week_score_is">Your week score is:</string>
    <string name="congratulations">Congratulations</string>
    <string name="details">Details</string>
    <string name="min">m</string>
    <string name="sec">s</string>
    <string name="stats_visibility">Stats visibility</string>
    <string name="day">Day</string>
    <string name="all">All</string>
    <string name="lang">Language</string>
    <string name="no_day_stats_info">Nothing yet for this day</string>
    <string name="about_app">About the app</string>
    <string name="support">Contact support</string>
</resources>