<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/importButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_db"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/ic_file_download"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:textColor="@color/dark"/>

    <Button
        android:id="@+id/exportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_db"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/ic_file_upload"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:textColor="@color/dark"/>

    <Button
        android:visibility="gone"
        android:id="@+id/buttonCloudConnect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/connect_cloud"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/ic_cloud"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:textColor="@color/dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/importDriveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/importDriveDB"
            android:gravity="start|center_vertical"
            android:drawableLeft="@drawable/ic_cloud_download"
            style="@style/Widget.AppCompat.Button.Borderless"
            tools:textColor="@color/dark"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressImport"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/dark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exportDriveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exportDriveDB"
            android:gravity="start|center_vertical"
            android:drawableLeft="@drawable/ic_cloud_upload"
            style="@style/Widget.AppCompat.Button.Borderless"
            tools:textColor="@color/dark"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressExport"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/dark"/>

    </LinearLayout>

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/ic_feedback"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:textColor="@color/dark" />

    <Button
        android:id="@+id/privacyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:gravity="start|center_vertical"
        android:drawableLeft="@drawable/ic_privacy"
        style="@style/Widget.AppCompat.Button.Borderless"
        tools:textColor="@color/dark" />

    <TextView
        android:id="@+id/versionTV"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:textColor="@color/material_on_background_disabled"
        tools:text="App version 1.72"/>

</LinearLayout>