<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginVertical="5dp"
    tools:context=".edit.EditActivity">

    <LinearLayout
        android:id="@+id/cardTypeChooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exCardText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/exercise_card"
            android:gravity="center"
            android:textColor="@color/red"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:drawableTopCompat="@drawable/ic_rv_exercise"
            app:drawableTint="@color/red" />

        <Switch
            android:id="@+id/exerciseStatsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/stCardText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/statistic_card"
            android:gravity="center"
            android:textColor="@color/green_main"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:drawableTopCompat="@drawable/ic_rv_stats"
            app:drawableTint="@color/green_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/restLayout"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/divider">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:textColor="@color/grey"
                android:text="@string/rest"
                android:textSize="@dimen/small_text_size" />

            <EditText
                android:id="@+id/textRest"
                android:text="120"
                android:theme="@style/Texts"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:maxLength="4"
                android:inputType="number"
                android:textSize="@dimen/basic_text_size"
                android:background="@null"
                android:gravity="bottom"
                android:hint="120"
                tools:ignore="LabelFor" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setsLayout"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/divider">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:textColor="@color/grey"
                android:text="@string/sets"
                android:textSize="@dimen/small_text_size" />

            <EditText
                android:id="@+id/textSets"
                android:text="5"
                android:theme="@style/Texts"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:maxLength="2"
                android:inputType="number"
                android:textSize="@dimen/basic_text_size"
                android:background="@null"
                android:gravity="bottom"
                android:hint="1"
                tools:ignore="LabelFor" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/weightLayout"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/divider">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:textColor="@color/grey"
                android:text="@string/weight"
                android:textSize="@dimen/small_text_size" />

            <EditText
                android:id="@+id/textWeight"
                android:text="0.0"
                android:theme="@style/Texts"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:maxLength="7"
                android:inputType="numberDecimal"
                android:textSize="@dimen/basic_text_size"
                android:background="@null"
                android:gravity="bottom"
                android:hint="0.0"
                tools:ignore="LabelFor" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/divider">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:textColor="@color/grey"
            android:text="@string/name"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/textName"
            android:theme="@style/Texts"
            android:importantForAutofill="no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:maxLength="30"
            android:inputType="text"
            android:textSize="@dimen/basic_text_size"
            android:background="@null"
            android:gravity="bottom"
            android:hint="@string/type_text"
            tools:ignore="LabelFor" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:textColor="@color/grey"
                android:text="@string/color"
                android:textSize="@dimen/small_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/randomColor"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_random_color"
                    style="@style/Widget.AppCompat.Light.ActionButton"
                    android:contentDescription="Random color" />

                <ImageButton
                    android:id="@+id/defaultColorButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_auto"
                    style="@style/Widget.AppCompat.Light.ActionButton"
                    android:contentDescription="@string/default_t" />

            </LinearLayout>

        </RelativeLayout>

        <SeekBar
            android:theme="@style/Texts"
            android:id="@+id/seekColorR"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <SeekBar
            android:theme="@style/Texts"
            android:id="@+id/seekColorG"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <SeekBar
            android:theme="@style/Texts"
            android:id="@+id/seekColorB"

            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/additionalEdits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/showWeight"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/show_weight"
            android:gravity="center_vertical"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <Button
            android:id="@+id/clickDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/date"
            android:gravity="start|center_vertical"
            app:drawableLeftCompat="@drawable/ic_calendar_now"
            style="@style/Widget.AppCompat.Button.Borderless"
            tools:textColor="@color/dark" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/delete_card"
            android:gravity="start|center_vertical"
            app:drawableLeftCompat="@drawable/ic_delete"
            style="@style/Widget.AppCompat.Button.Borderless"
            tools:textColor="@color/dark"/>

    </LinearLayout>

</LinearLayout>